# demos

./: Readme.md  pyproject.toml
local/: hello_demo.py  launch_fliptext_with_blocks.py  launch_generate_tone.py  launch_reverse_audio.py  launch_text_generator.py
src/blocks_demo/: flip_text_demo.py
src/first_demo/: audio_reverse.py  first_model.py  generate_tone_model.py  text_generation_demo.py
