[tool.poetry]
name = "torch"
version = "0.1.0"
description = ""
authors = ["numpy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
transformers = "^4.41.2"
gradio = "^4.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
